--- a/posts/2024-12-22-hi-and-welcome/index.qmd
+++ b/posts/2024-12-22-hi-and-welcome/index.qmd
@@ -33,7 +33,8 @@ ggplot(data, aes(x = timeframe, y = ability_points, fill = timeframe)) +
     panel.grid.major.x = element_blank(),
     panel.grid.minor.x = element_blank(),
     panel.grid.minor.y = element_blank(),
-    legend.position = "none"
+    legend.position = "none",
+    axis.text = element_text(size = 12)
     )
 
 ```
