--- a/poems/2024-12-26-osoznal-kyda-popal/index.qmd
+++ b/poems/2024-12-26-osoznal-kyda-popal/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Когда осознал куда попал"
+title: "Когда Осознал Куда Попал"
 description: " "
 author:
   - name: Timothy Abramov
@@ -11,7 +11,23 @@ freeze: true
 lightbox: true
 ---
 
-Когда осознал куда попал, Кем стал, почему везде провал, Хотя бы всех друзей не растерял. Глаза я раньше так вот раздирал? Я вчера хоть спал? А как там мой подвал? Спину не надорвал? Поток мыслей скачал? А что вообще я делал?
+Когда осознал куда попал, 
+
+Кем стал, почему везде провал, 
+
+Хотя бы всех друзей не растерял. 
+
+Глаза я раньше так вот раздирал? 
+
+Я вчера хоть спал? 
+
+А как там мой подвал? 
+
+Спину не надорвал? 
+
+Поток мыслей скачал? 
+
+А что вообще я делал?
 
 ![](images/1.jpg){group="group1"}
 
