--- a/poems/2024-12-27-colors/index.qmd
+++ b/poems/2024-12-27-colors/index.qmd
@@ -38,7 +38,9 @@ How people can in this galore,
 
 To not forget it all? 
 
-All things that torture us And bring us sadness, 
+All things that torture us 
+
+And bring us sadness, 
 
 All things that hurt our souls, 
 
@@ -46,7 +48,7 @@ As if impaled by sword.
 
 Since, after all, 
 
-Our life is not a grayscale canvas, 
+Our life is not a gray scale canvas, 
 
 We have our hope, we have our Lord!
 
