--- a/posts/2024-12-25-liman-adventure-winter2021/index.qmd
+++ b/posts/2024-12-25-liman-adventure-winter2021/index.qmd
@@ -1,11 +1,11 @@
 ---
 title: "It's nice"
-description: "Estuary hike (~40 miles). Ukraine, Jan 1 2021"
+description: "Winter estuary hike [~40 miles, 01/01/2021, Ukraine]"
 author:
   - name: Timothy Abramov
     url: https://timothyabramov.github.io/about.html
 date: 12-25-2024
-categories: [personal, "story time", hiking] 
+categories: [personal, "story time", hiking, Ukraine] 
 draft: false
 freeze: true
 lightbox: true
